debug03/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> PROGRAM_BEGIN S_COLON stmts PROGRAM_END S_COLON
Rule 2     Program -> WS
Rule 3     stmts -> stmts stmt
Rule 4     stmts -> stmt
Rule 5     stmt -> trait_decl
Rule 6     stmt -> print_stmt
Rule 7     stmt -> generate_stmt
Rule 8     stmt -> assign_stmt
Rule 9     stmt -> S_COLON
Rule 10    trait_decl -> TRAIT trait_id LP1 class_args RP1 COLON LP2 trait_decl_stmts RP2 S_COLON
Rule 11    trait_decl -> TRAIT trait_id LP1 class_args RP1 EXTENDS unary_pred COLON LP2 trait_decl_stmts RP2 S_COLON
Rule 12    trait_id -> ID
Rule 13    class_args -> main_arg COMMA sub_args
Rule 14    class_args -> main_arg
Rule 15    main_arg -> ID
Rule 16    sub_args -> necessary_args COMMA optional_args
Rule 17    sub_args -> necessary_args
Rule 18    sub_args -> optional_args
Rule 19    necessary_args -> necessary_args COMMA necessary_arg
Rule 20    necessary_args -> necessary_arg
Rule 21    necessary_arg -> ID
Rule 22    optional_args -> optional_args COMMA optional_arg
Rule 23    optional_args -> optional_arg
Rule 24    optional_arg -> ID ASSIGN unary_pred
Rule 25    trait_decl_stmts -> trait_decl_stmts trait_decl_stmt
Rule 26    trait_decl_stmts -> trait_decl_stmt
Rule 27    trait_decl_stmts -> PASS S_COLON
Rule 28    trait_decl_stmt -> FN COLON LP2 decl_fn_stmts RP2 S_COLON
Rule 29    trait_decl_stmt -> VAR COLON LP2 decl_stmts RP2 S_COLON
Rule 30    trait_decl_stmt -> CLS_FN COLON LP2 decl_cls_fn_stmts RP2 S_COLON
Rule 31    trait_decl_stmt -> CLS_VAR COLON LP2 decl_stmts RP2 S_COLON
Rule 32    trait_decl_stmt -> STATIC_FN COLON LP2 decl_static_fn_stmts RP2 S_COLON
Rule 33    decl_fn_stmts -> decl_fn_stmts decl_fn_stmt
Rule 34    decl_fn_stmts -> decl_fn_stmt
Rule 35    decl_fn_stmt -> fn_id LP1 pred_args RP1 S_COLON
Rule 36    decl_fn_stmt -> fn_id LP1 pred_args RP1 R_ARROW unary_pred S_COLON
Rule 37    decl_fn_stmt -> fn_id LP3 type_var_args RP3 LP1 pred_args RP1 S_COLON
Rule 38    decl_fn_stmt -> fn_id LP3 type_var_args RP3 LP1 pred_args RP1 R_ARROW unary_pred S_COLON
Rule 39    decl_cls_fn_stmts -> decl_cls_fn_stmts decl_cls_fn_stmt
Rule 40    decl_cls_fn_stmts -> decl_cls_fn_stmt
Rule 41    decl_cls_fn_stmt -> fn_id LP1 pred_args RP1 S_COLON
Rule 42    decl_cls_fn_stmt -> fn_id LP1 pred_args RP1 R_ARROW unary_pred S_COLON
Rule 43    decl_cls_fn_stmt -> fn_id LP3 type_var_args RP3 LP1 pred_args RP1 S_COLON
Rule 44    decl_cls_fn_stmt -> fn_id LP3 type_var_args RP3 LP1 pred_args RP1 R_ARROW unary_pred S_COLON
Rule 45    fn_id -> ID
Rule 46    pred_args -> main_pred COMMA next_preds
Rule 47    pred_args -> main_pred
Rule 48    main_pred -> ID
Rule 49    next_preds -> next_anonymous_necessary_preds COMMA next_anonymous_opt_preds COMMA STAR COMMA next_named_preds
Rule 50    next_preds -> next_anonymous_necessary_preds COMMA next_anonymous_opt_preds COMMA STAR
Rule 51    next_preds -> next_anonymous_necessary_preds COMMA next_anonymous_opt_preds
Rule 52    next_preds -> next_anonymous_necessary_preds COMMA STAR COMMA next_named_preds
Rule 53    next_preds -> next_anonymous_necessary_preds COMMA STAR
Rule 54    next_preds -> next_anonymous_necessary_preds
Rule 55    next_preds -> next_anonymous_opt_preds COMMA STAR COMMA next_named_preds
Rule 56    next_preds -> next_anonymous_opt_preds COMMA STAR
Rule 57    next_preds -> next_anonymous_opt_preds
Rule 58    next_preds -> STAR next_named_preds
Rule 59    next_preds -> STAR
Rule 60    next_anonymous_necessary_preds -> next_anonymous_necessary_preds COMMA next_anonymous_necessary_pred
Rule 61    next_anonymous_necessary_preds -> next_anonymous_necessary_pred
Rule 62    next_anonymous_necessary_pred -> unary_pred
Rule 63    next_anonymous_opt_preds -> next_anonymous_opt_preds COMMA next_anonymous_opt_pred
Rule 64    next_anonymous_opt_preds -> next_anonymous_opt_pred
Rule 65    next_anonymous_opt_pred -> ASSIGN unary_pred
Rule 66    next_named_preds -> next_named_preds COMMA next_named_pred
Rule 67    next_named_preds -> next_named_pred
Rule 68    next_named_pred -> next_named_necessary_pred
Rule 69    next_named_pred -> next_named_opt_pred
Rule 70    next_named_necessary_pred -> arg_name COLON unary_pred
Rule 71    next_named_opt_pred -> arg_name COLON ASSIGN unary_pred
Rule 72    arg_name -> ID
Rule 73    type_var_args -> type_var_args COMMA type_var_arg
Rule 74    type_var_args -> type_var_arg
Rule 75    type_var_arg -> type_var_id
Rule 76    type_var_arg -> type_var_id COLON unary_pred
Rule 77    type_var_id -> ID
Rule 78    unary_pred -> pred_name
Rule 79    unary_pred -> unnamed_pred
Rule 80    unnamed_pred -> pred_name LP3 args RP3
Rule 81    unnamed_pred -> LP3 pred_expr RP3
Rule 82    unnamed_pred -> TRAIT_OF LP1 var_expr RP1
Rule 83    unnamed_pred -> NONE
Rule 84    pred_name -> ID
Rule 85    pred_expr -> pred_expr OR pred_expr_a
Rule 86    pred_expr -> pred_expr_a
Rule 87    pred_expr_a -> pred_expr_a AND pred_expr_b
Rule 88    pred_expr_a -> pred_expr_b
Rule 89    pred_expr_b -> NOT pred_expr_b
Rule 90    pred_expr_b -> pred_expr_c
Rule 91    pred_expr_c -> unary_pred
Rule 92    pred_expr_c -> LP1 pred_expr RP1
Rule 93    var_expr -> unary_pred DOT member_var_name
Rule 94    member_var_name -> ID
Rule 95    decl_stmts -> decl_stmts decl_stmt
Rule 96    decl_stmts -> decl_stmt
Rule 97    decl_stmt -> var_id S_COLON
Rule 98    decl_stmt -> var_id COLON unary_pred S_COLON
Rule 99    decl_stmt -> LP3 vars_id RP3 S_COLON
Rule 100   decl_stmt -> LP3 vars_id RP3 COLON unary_pred S_COLON
Rule 101   vars_id -> vars_id COMMA var_id
Rule 102   vars_id -> var_id
Rule 103   var_id -> ID
Rule 104   decl_static_fn_stmts -> decl_static_fn_stmts decl_static_fn_stmt
Rule 105   decl_static_fn_stmts -> decl_static_fn_stmt
Rule 106   decl_static_fn_stmt -> static_fn_id LP1 next_preds RP1 S_COLON
Rule 107   decl_static_fn_stmt -> static_fn_id LP1 next_preds RP1 R_ARROW unary_pred S_COLON
Rule 108   decl_static_fn_stmt -> static_fn_id LP3 type_var_args RP3 LP1 next_preds RP1 S_COLON
Rule 109   decl_static_fn_stmt -> static_fn_id LP3 type_var_args RP3 LP1 next_preds RP1 R_ARROW unary_pred S_COLON
Rule 110   decl_static_fn_stmt -> static_fn_id LP1 RP1 S_COLON
Rule 111   decl_static_fn_stmt -> static_fn_id LP1 RP1 R_ARROW unary_pred S_COLON
Rule 112   decl_static_fn_stmt -> static_fn_id LP3 type_var_args RP3 LP1 RP1 S_COLON
Rule 113   decl_static_fn_stmt -> static_fn_id LP3 type_var_args RP3 LP1 RP1 R_ARROW unary_pred S_COLON
Rule 114   static_fn_id -> ID
Rule 115   print_stmt -> PRINTINFO to_print S_COLON
Rule 116   generate_stmt -> GENERATE to_print S_COLON
Rule 117   to_print -> ID
Rule 118   to_print -> boolean_expr
Rule 119   to_print -> unnamed_pred
Rule 120   to_print -> unary_pred DOT member_fn_name
Rule 121   boolean_expr -> boolean_expr OR boolean_expr_a
Rule 122   boolean_expr -> boolean_expr_a
Rule 123   boolean_expr_a -> boolean_expr_a XOR boolean_expr_b
Rule 124   boolean_expr_a -> boolean_expr_b
Rule 125   boolean_expr_b -> boolean_expr_b AND boolean_expr_c
Rule 126   boolean_expr_b -> boolean_expr_c
Rule 127   boolean_expr_c -> boolean_expr_c EQ boolean_expr_d
Rule 128   boolean_expr_c -> boolean_expr_c NEQ boolean_expr_d
Rule 129   boolean_expr_c -> boolean_expr_d
Rule 130   boolean_expr_d -> NOT boolean_expr_e
Rule 131   boolean_expr_d -> boolean_expr_e
Rule 132   boolean_expr_e -> atomic_boolean_expr
Rule 133   boolean_expr_e -> LP1 boolean_expr RP1
Rule 134   atomic_boolean_expr -> constants
Rule 135   atomic_boolean_expr -> unary_pred LP1 args RP1
Rule 136   atomic_boolean_expr -> unary_pred IMPLIES unary_pred
Rule 137   atomic_boolean_expr -> LP1 unary_pred EQ unary_pred RP1
Rule 138   atomic_boolean_expr -> LP1 unary_pred NEQ unary_pred RP1
Rule 139   constants -> TRUE
Rule 140   constants -> FALSE
Rule 141   args -> args COMMA arg
Rule 142   args -> arg
Rule 143   arg -> ID
Rule 144   member_fn_name -> ID
Rule 145   assign_stmt -> names ASSIGN assign_expr S_COLON
Rule 146   names -> names COMMA name
Rule 147   names -> name
Rule 148   name -> ID
Rule 149   assign_expr -> names ASSIGN assign_expr
Rule 150   assign_expr -> names

Terminals, with rules where they appear

AND                  : 87 125
ASSIGN               : 24 65 71 145 149
CLS_FN               : 30
CLS_VAR              : 31
COLON                : 10 11 28 29 30 31 32 70 71 76 98 100
COMMA                : 13 16 19 22 46 49 49 49 50 50 51 52 52 53 55 55 56 60 63 66 73 101 141 146
DOT                  : 93 120
EQ                   : 127 137
EXTENDS              : 11
FALSE                : 140
FN                   : 28
GENERATE             : 116
ID                   : 12 15 21 24 45 48 72 77 84 94 103 114 117 143 144 148
IMPLIES              : 136
LP1                  : 10 11 35 36 37 38 41 42 43 44 82 92 106 107 108 109 110 111 112 113 133 135 137 138
LP2                  : 10 11 28 29 30 31 32
LP3                  : 37 38 43 44 80 81 99 100 108 109 112 113
NEQ                  : 128 138
NONE                 : 83
NOT                  : 89 130
OR                   : 85 121
PASS                 : 27
PRINTINFO            : 115
PROGRAM_BEGIN        : 1
PROGRAM_END          : 1
RP1                  : 10 11 35 36 37 38 41 42 43 44 82 92 106 107 108 109 110 111 112 113 133 135 137 138
RP2                  : 10 11 28 29 30 31 32
RP3                  : 37 38 43 44 80 81 99 100 108 109 112 113
R_ARROW              : 36 38 42 44 107 109 111 113
STAR                 : 49 50 52 53 55 56 58 59
STATIC_FN            : 32
S_COLON              : 1 1 9 10 11 27 28 29 30 31 32 35 36 37 38 41 42 43 44 97 98 99 100 106 107 108 109 110 111 112 113 115 116 145
TRAIT                : 10 11
TRAIT_OF             : 82
TRUE                 : 139
VAR                  : 29
WS                   : 2
XOR                  : 123
error                : 

Nonterminals, with rules where they appear

Program              : 0
arg                  : 141 142
arg_name             : 70 71
args                 : 80 135 141
assign_expr          : 145 149
assign_stmt          : 8
atomic_boolean_expr  : 132
boolean_expr         : 118 121 133
boolean_expr_a       : 121 122 123
boolean_expr_b       : 123 124 125
boolean_expr_c       : 125 126 127 128
boolean_expr_d       : 127 128 129
boolean_expr_e       : 130 131
class_args           : 10 11
constants            : 134
decl_cls_fn_stmt     : 39 40
decl_cls_fn_stmts    : 30 39
decl_fn_stmt         : 33 34
decl_fn_stmts        : 28 33
decl_static_fn_stmt  : 104 105
decl_static_fn_stmts : 32 104
decl_stmt            : 95 96
decl_stmts           : 29 31 95
fn_id                : 35 36 37 38 41 42 43 44
generate_stmt        : 7
main_arg             : 13 14
main_pred            : 46 47
member_fn_name       : 120
member_var_name      : 93
name                 : 146 147
names                : 145 146 149 150
necessary_arg        : 19 20
necessary_args       : 16 17 19
next_anonymous_necessary_pred : 60 61
next_anonymous_necessary_preds : 49 50 51 52 53 54 60
next_anonymous_opt_pred : 63 64
next_anonymous_opt_preds : 49 50 51 55 56 57 63
next_named_necessary_pred : 68
next_named_opt_pred  : 69
next_named_pred      : 66 67
next_named_preds     : 49 52 55 58 66
next_preds           : 46 106 107 108 109
optional_arg         : 22 23
optional_args        : 16 18 22
pred_args            : 35 36 37 38 41 42 43 44
pred_expr            : 81 85 92
pred_expr_a          : 85 86 87
pred_expr_b          : 87 88 89
pred_expr_c          : 90
pred_name            : 78 80
print_stmt           : 6
static_fn_id         : 106 107 108 109 110 111 112 113
stmt                 : 3 4
stmts                : 1 3
sub_args             : 13
to_print             : 115 116
trait_decl           : 5
trait_decl_stmt      : 25 26
trait_decl_stmts     : 10 11 25
trait_id             : 10 11
type_var_arg         : 73 74
type_var_args        : 37 38 43 44 73 108 109 112 113
type_var_id          : 75 76
unary_pred           : 11 24 36 38 42 44 62 65 70 71 76 91 93 98 100 107 109 111 113 120 135 136 136 137 137 138 138
unnamed_pred         : 79 119
var_expr             : 82
var_id               : 97 98 101 102
vars_id              : 99 100 101

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . PROGRAM_BEGIN S_COLON stmts PROGRAM_END S_COLON
    (2) Program -> . WS

    PROGRAM_BEGIN   shift and go to state 2
    WS              shift and go to state 3

    Program                        shift and go to state 1

state 1

    (0) S' -> Program .



state 2

    (1) Program -> PROGRAM_BEGIN . S_COLON stmts PROGRAM_END S_COLON

    S_COLON         shift and go to state 4


state 3

    (2) Program -> WS .

    $end            reduce using rule 2 (Program -> WS .)


state 4

    (1) Program -> PROGRAM_BEGIN S_COLON . stmts PROGRAM_END S_COLON
    (3) stmts -> . stmts stmt
    (4) stmts -> . stmt
    (5) stmt -> . trait_decl
    (6) stmt -> . print_stmt
    (7) stmt -> . generate_stmt
    (8) stmt -> . assign_stmt
    (9) stmt -> . S_COLON
    (10) trait_decl -> . TRAIT trait_id LP1 class_args RP1 COLON LP2 trait_decl_stmts RP2 S_COLON
    (11) trait_decl -> . TRAIT trait_id LP1 class_args RP1 EXTENDS unary_pred COLON LP2 trait_decl_stmts RP2 S_COLON
    (115) print_stmt -> . PRINTINFO to_print S_COLON
    (116) generate_stmt -> . GENERATE to_print S_COLON
    (145) assign_stmt -> . names ASSIGN assign_expr S_COLON
    (146) names -> . names COMMA name
    (147) names -> . name
    (148) name -> . ID

    S_COLON         shift and go to state 5
    TRAIT           shift and go to state 12
    PRINTINFO       shift and go to state 13
    GENERATE        shift and go to state 14
    ID              shift and go to state 17

    stmts                          shift and go to state 6
    stmt                           shift and go to state 7
    trait_decl                     shift and go to state 8
    print_stmt                     shift and go to state 9
    generate_stmt                  shift and go to state 10
    assign_stmt                    shift and go to state 11
    names                          shift and go to state 15
    name                           shift and go to state 16

state 5

    (9) stmt -> S_COLON .

    PROGRAM_END     reduce using rule 9 (stmt -> S_COLON .)
    S_COLON         reduce using rule 9 (stmt -> S_COLON .)
    TRAIT           reduce using rule 9 (stmt -> S_COLON .)
    PRINTINFO       reduce using rule 9 (stmt -> S_COLON .)
    GENERATE        reduce using rule 9 (stmt -> S_COLON .)
    ID              reduce using rule 9 (stmt -> S_COLON .)


state 6

    (1) Program -> PROGRAM_BEGIN S_COLON stmts . PROGRAM_END S_COLON
    (3) stmts -> stmts . stmt
    (5) stmt -> . trait_decl
    (6) stmt -> . print_stmt
    (7) stmt -> . generate_stmt
    (8) stmt -> . assign_stmt
    (9) stmt -> . S_COLON
    (10) trait_decl -> . TRAIT trait_id LP1 class_args RP1 COLON LP2 trait_decl_stmts RP2 S_COLON
    (11) trait_decl -> . TRAIT trait_id LP1 class_args RP1 EXTENDS unary_pred COLON LP2 trait_decl_stmts RP2 S_COLON
    (115) print_stmt -> . PRINTINFO to_print S_COLON
    (116) generate_stmt -> . GENERATE to_print S_COLON
    (145) assign_stmt -> . names ASSIGN assign_expr S_COLON
    (146) names -> . names COMMA name
    (147) names -> . name
    (148) name -> . ID

    PROGRAM_END     shift and go to state 18
    S_COLON         shift and go to state 5
    TRAIT           shift and go to state 12
    PRINTINFO       shift and go to state 13
    GENERATE        shift and go to state 14
    ID              shift and go to state 17

    stmt                           shift and go to state 19
    trait_decl                     shift and go to state 8
    print_stmt                     shift and go to state 9
    generate_stmt                  shift and go to state 10
    assign_stmt                    shift and go to state 11
    names                          shift and go to state 15
    name                           shift and go to state 16

state 7

    (4) stmts -> stmt .

    PROGRAM_END     reduce using rule 4 (stmts -> stmt .)
    S_COLON         reduce using rule 4 (stmts -> stmt .)
    TRAIT           reduce using rule 4 (stmts -> stmt .)
    PRINTINFO       reduce using rule 4 (stmts -> stmt .)
    GENERATE        reduce using rule 4 (stmts -> stmt .)
    ID              reduce using rule 4 (stmts -> stmt .)


state 8

    (5) stmt -> trait_decl .

    PROGRAM_END     reduce using rule 5 (stmt -> trait_decl .)
    S_COLON         reduce using rule 5 (stmt -> trait_decl .)
    TRAIT           reduce using rule 5 (stmt -> trait_decl .)
    PRINTINFO       reduce using rule 5 (stmt -> trait_decl .)
    GENERATE        reduce using rule 5 (stmt -> trait_decl .)
    ID              reduce using rule 5 (stmt -> trait_decl .)


state 9

    (6) stmt -> print_stmt .

    PROGRAM_END     reduce using rule 6 (stmt -> print_stmt .)
    S_COLON         reduce using rule 6 (stmt -> print_stmt .)
    TRAIT           reduce using rule 6 (stmt -> print_stmt .)
    PRINTINFO       reduce using rule 6 (stmt -> print_stmt .)
    GENERATE        reduce using rule 6 (stmt -> print_stmt .)
    ID              reduce using rule 6 (stmt -> print_stmt .)


state 10

    (7) stmt -> generate_stmt .

    PROGRAM_END     reduce using rule 7 (stmt -> generate_stmt .)
    S_COLON         reduce using rule 7 (stmt -> generate_stmt .)
    TRAIT           reduce using rule 7 (stmt -> generate_stmt .)
    PRINTINFO       reduce using rule 7 (stmt -> generate_stmt .)
    GENERATE        reduce using rule 7 (stmt -> generate_stmt .)
    ID              reduce using rule 7 (stmt -> generate_stmt .)


state 11

    (8) stmt -> assign_stmt .

    PROGRAM_END     reduce using rule 8 (stmt -> assign_stmt .)
    S_COLON         reduce using rule 8 (stmt -> assign_stmt .)
    TRAIT           reduce using rule 8 (stmt -> assign_stmt .)
    PRINTINFO       reduce using rule 8 (stmt -> assign_stmt .)
    GENERATE        reduce using rule 8 (stmt -> assign_stmt .)
    ID              reduce using rule 8 (stmt -> assign_stmt .)


state 12

    (10) trait_decl -> TRAIT . trait_id LP1 class_args RP1 COLON LP2 trait_decl_stmts RP2 S_COLON
    (11) trait_decl -> TRAIT . trait_id LP1 class_args RP1 EXTENDS unary_pred COLON LP2 trait_decl_stmts RP2 S_COLON
    (12) trait_id -> . ID

    ID              shift and go to state 21

    trait_id                       shift and go to state 20

state 13

    (115) print_stmt -> PRINTINFO . to_print S_COLON
    (117) to_print -> . ID
    (118) to_print -> . boolean_expr
    (119) to_print -> . unnamed_pred
    (120) to_print -> . unary_pred DOT member_fn_name
    (121) boolean_expr -> . boolean_expr OR boolean_expr_a
    (122) boolean_expr -> . boolean_expr_a
    (80) unnamed_pred -> . pred_name LP3 args RP3
    (81) unnamed_pred -> . LP3 pred_expr RP3
    (82) unnamed_pred -> . TRAIT_OF LP1 var_expr RP1
    (83) unnamed_pred -> . NONE
    (78) unary_pred -> . pred_name
    (79) unary_pred -> . unnamed_pred
    (123) boolean_expr_a -> . boolean_expr_a XOR boolean_expr_b
    (124) boolean_expr_a -> . boolean_expr_b
    (84) pred_name -> . ID
    (125) boolean_expr_b -> . boolean_expr_b AND boolean_expr_c
    (126) boolean_expr_b -> . boolean_expr_c
    (127) boolean_expr_c -> . boolean_expr_c EQ boolean_expr_d
    (128) boolean_expr_c -> . boolean_expr_c NEQ boolean_expr_d
    (129) boolean_expr_c -> . boolean_expr_d
    (130) boolean_expr_d -> . NOT boolean_expr_e
    (131) boolean_expr_d -> . boolean_expr_e
    (132) boolean_expr_e -> . atomic_boolean_expr
    (133) boolean_expr_e -> . LP1 boolean_expr RP1
    (134) atomic_boolean_expr -> . constants
    (135) atomic_boolean_expr -> . unary_pred LP1 args RP1
    (136) atomic_boolean_expr -> . unary_pred IMPLIES unary_pred
    (137) atomic_boolean_expr -> . LP1 unary_pred EQ unary_pred RP1
    (138) atomic_boolean_expr -> . LP1 unary_pred NEQ unary_pred RP1
    (139) constants -> . TRUE
    (140) constants -> . FALSE

    ID              shift and go to state 23
    LP3             shift and go to state 29
    TRAIT_OF        shift and go to state 30
    NONE            shift and go to state 32
    NOT             shift and go to state 36
    LP1             shift and go to state 31
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41

    to_print                       shift and go to state 22
    boolean_expr                   shift and go to state 24
    unnamed_pred                   shift and go to state 25
    unary_pred                     shift and go to state 26
    boolean_expr_a                 shift and go to state 27
    pred_name                      shift and go to state 28
    boolean_expr_b                 shift and go to state 33
    boolean_expr_c                 shift and go to state 34
    boolean_expr_d                 shift and go to state 35
    boolean_expr_e                 shift and go to state 37
    atomic_boolean_expr            shift and go to state 38
    constants                      shift and go to state 39

state 14

    (116) generate_stmt -> GENERATE . to_print S_COLON
    (117) to_print -> . ID
    (118) to_print -> . boolean_expr
    (119) to_print -> . unnamed_pred
    (120) to_print -> . unary_pred DOT member_fn_name
    (121) boolean_expr -> . boolean_expr OR boolean_expr_a
    (122) boolean_expr -> . boolean_expr_a
    (80) unnamed_pred -> . pred_name LP3 args RP3
    (81) unnamed_pred -> . LP3 pred_expr RP3
    (82) unnamed_pred -> . TRAIT_OF LP1 var_expr RP1
    (83) unnamed_pred -> . NONE
    (78) unary_pred -> . pred_name
    (79) unary_pred -> . unnamed_pred
    (123) boolean_expr_a -> . boolean_expr_a XOR boolean_expr_b
    (124) boolean_expr_a -> . boolean_expr_b
    (84) pred_name -> . ID
    (125) boolean_expr_b -> . boolean_expr_b AND boolean_expr_c
    (126) boolean_expr_b -> . boolean_expr_c
    (127) boolean_expr_c -> . boolean_expr_c EQ boolean_expr_d
    (128) boolean_expr_c -> . boolean_expr_c NEQ boolean_expr_d
    (129) boolean_expr_c -> . boolean_expr_d
    (130) boolean_expr_d -> . NOT boolean_expr_e
    (131) boolean_expr_d -> . boolean_expr_e
    (132) boolean_expr_e -> . atomic_boolean_expr
    (133) boolean_expr_e -> . LP1 boolean_expr RP1
    (134) atomic_boolean_expr -> . constants
    (135) atomic_boolean_expr -> . unary_pred LP1 args RP1
    (136) atomic_boolean_expr -> . unary_pred IMPLIES unary_pred
    (137) atomic_boolean_expr -> . LP1 unary_pred EQ unary_pred RP1
    (138) atomic_boolean_expr -> . LP1 unary_pred NEQ unary_pred RP1
    (139) constants -> . TRUE
    (140) constants -> . FALSE

    ID              shift and go to state 23
    LP3             shift and go to state 29
    TRAIT_OF        shift and go to state 30
    NONE            shift and go to state 32
    NOT             shift and go to state 36
    LP1             shift and go to state 31
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41

    to_print                       shift and go to state 42
    boolean_expr                   shift and go to state 24
    unnamed_pred                   shift and go to state 25
    unary_pred                     shift and go to state 26
    boolean_expr_a                 shift and go to state 27
    pred_name                      shift and go to state 28
    boolean_expr_b                 shift and go to state 33
    boolean_expr_c                 shift and go to state 34
    boolean_expr_d                 shift and go to state 35
    boolean_expr_e                 shift and go to state 37
    atomic_boolean_expr            shift and go to state 38
    constants                      shift and go to state 39

state 15

    (145) assign_stmt -> names . ASSIGN assign_expr S_COLON
    (146) names -> names . COMMA name

    ASSIGN          shift and go to state 43
    COMMA           shift and go to state 44


state 16

    (147) names -> name .

    ASSIGN          reduce using rule 147 (names -> name .)
    COMMA           reduce using rule 147 (names -> name .)
    S_COLON         reduce using rule 147 (names -> name .)


state 17

    (148) name -> ID .

    ASSIGN          reduce using rule 148 (name -> ID .)
    COMMA           reduce using rule 148 (name -> ID .)
    S_COLON         reduce using rule 148 (name -> ID .)


state 18

    (1) Program -> PROGRAM_BEGIN S_COLON stmts PROGRAM_END . S_COLON

    S_COLON         shift and go to state 45


state 19

    (3) stmts -> stmts stmt .

    PROGRAM_END     reduce using rule 3 (stmts -> stmts stmt .)
    S_COLON         reduce using rule 3 (stmts -> stmts stmt .)
    TRAIT           reduce using rule 3 (stmts -> stmts stmt .)
    PRINTINFO       reduce using rule 3 (stmts -> stmts stmt .)
    GENERATE        reduce using rule 3 (stmts -> stmts stmt .)
    ID              reduce using rule 3 (stmts -> stmts stmt .)


state 20

    (10) trait_decl -> TRAIT trait_id . LP1 class_args RP1 COLON LP2 trait_decl_stmts RP2 S_COLON
    (11) trait_decl -> TRAIT trait_id . LP1 class_args RP1 EXTENDS unary_pred COLON LP2 trait_decl_stmts RP2 S_COLON

    LP1             shift and go to state 46


state 21

    (12) trait_id -> ID .

    LP1             reduce using rule 12 (trait_id -> ID .)


state 22

    (115) print_stmt -> PRINTINFO to_print . S_COLON

    S_COLON         shift and go to state 47


state 23

    (117) to_print -> ID .
    (84) pred_name -> ID .

    S_COLON         reduce using rule 117 (to_print -> ID .)
    LP3             reduce using rule 84 (pred_name -> ID .)
    DOT             reduce using rule 84 (pred_name -> ID .)
    LP1             reduce using rule 84 (pred_name -> ID .)
    IMPLIES         reduce using rule 84 (pred_name -> ID .)


state 24

    (118) to_print -> boolean_expr .
    (121) boolean_expr -> boolean_expr . OR boolean_expr_a

    S_COLON         reduce using rule 118 (to_print -> boolean_expr .)
    OR              shift and go to state 48


state 25

    (119) to_print -> unnamed_pred .
    (79) unary_pred -> unnamed_pred .

    S_COLON         reduce using rule 119 (to_print -> unnamed_pred .)
    DOT             reduce using rule 79 (unary_pred -> unnamed_pred .)
    LP1             reduce using rule 79 (unary_pred -> unnamed_pred .)
    IMPLIES         reduce using rule 79 (unary_pred -> unnamed_pred .)


state 26

    (120) to_print -> unary_pred . DOT member_fn_name
    (135) atomic_boolean_expr -> unary_pred . LP1 args RP1
    (136) atomic_boolean_expr -> unary_pred . IMPLIES unary_pred

    DOT             shift and go to state 49
    LP1             shift and go to state 50
    IMPLIES         shift and go to state 51


state 27

    (122) boolean_expr -> boolean_expr_a .
    (123) boolean_expr_a -> boolean_expr_a . XOR boolean_expr_b

    OR              reduce using rule 122 (boolean_expr -> boolean_expr_a .)
    S_COLON         reduce using rule 122 (boolean_expr -> boolean_expr_a .)
    RP1             reduce using rule 122 (boolean_expr -> boolean_expr_a .)
    XOR             shift and go to state 52


state 28

    (80) unnamed_pred -> pred_name . LP3 args RP3
    (78) unary_pred -> pred_name .

    LP3             shift and go to state 53
    DOT             reduce using rule 78 (unary_pred -> pred_name .)
    LP1             reduce using rule 78 (unary_pred -> pred_name .)
    IMPLIES         reduce using rule 78 (unary_pred -> pred_name .)


state 29

    (81) unnamed_pred -> LP3 . pred_expr RP3
    (85) pred_expr -> . pred_expr OR pred_expr_a
    (86) pred_expr -> . pred_expr_a
    (87) pred_expr_a -> . pred_expr_a AND pred_expr_b
    (88) pred_expr_a -> . pred_expr_b
    (89) pred_expr_b -> . NOT pred_expr_b
    (90) pred_expr_b -> . pred_expr_c
    (91) pred_expr_c -> . unary_pred
    (92) pred_expr_c -> . LP1 pred_expr RP1
    (78) unary_pred -> . pred_name
    (79) unary_pred -> . unnamed_pred
    (84) pred_name -> . ID
    (80) unnamed_pred -> . pred_name LP3 args RP3
    (81) unnamed_pred -> . LP3 pred_expr RP3
    (82) unnamed_pred -> . TRAIT_OF LP1 var_expr RP1
    (83) unnamed_pred -> . NONE

    NOT             shift and go to state 57
    LP1             shift and go to state 60
    ID              shift and go to state 63
    LP3             shift and go to state 29
    TRAIT_OF        shift and go to state 30
    NONE            shift and go to state 32

    pred_expr                      shift and go to state 54
    pred_expr_a                    shift and go to state 55
    pred_expr_b                    shift and go to state 56
    pred_expr_c                    shift and go to state 58
    unary_pred                     shift and go to state 59
    pred_name                      shift and go to state 61
    unnamed_pred                   shift and go to state 62

state 30

    (82) unnamed_pred -> TRAIT_OF . LP1 var_expr RP1

    LP1             shift and go to state 64


state 31

    (133) boolean_expr_e -> LP1 . boolean_expr RP1
    (137) atomic_boolean_expr -> LP1 . unary_pred EQ unary_pred RP1
    (138) atomic_boolean_expr -> LP1 . unary_pred NEQ unary_pred RP1
    (121) boolean_expr -> . boolean_expr OR boolean_expr_a
    (122) boolean_expr -> . boolean_expr_a
    (78) unary_pred -> . pred_name
    (79) unary_pred -> . unnamed_pred
    (123) boolean_expr_a -> . boolean_expr_a XOR boolean_expr_b
    (124) boolean_expr_a -> . boolean_expr_b
    (84) pred_name -> . ID
    (80) unnamed_pred -> . pred_name LP3 args RP3
    (81) unnamed_pred -> . LP3 pred_expr RP3
    (82) unnamed_pred -> . TRAIT_OF LP1 var_expr RP1
    (83) unnamed_pred -> . NONE
    (125) boolean_expr_b -> . boolean_expr_b AND boolean_expr_c
    (126) boolean_expr_b -> . boolean_expr_c
    (127) boolean_expr_c -> . boolean_expr_c EQ boolean_expr_d
    (128) boolean_expr_c -> . boolean_expr_c NEQ boolean_expr_d
    (129) boolean_expr_c -> . boolean_expr_d
    (130) boolean_expr_d -> . NOT boolean_expr_e
    (131) boolean_expr_d -> . boolean_expr_e
    (132) boolean_expr_e -> . atomic_boolean_expr
    (133) boolean_expr_e -> . LP1 boolean_expr RP1
    (134) atomic_boolean_expr -> . constants
    (135) atomic_boolean_expr -> . unary_pred LP1 args RP1
    (136) atomic_boolean_expr -> . unary_pred IMPLIES unary_pred
    (137) atomic_boolean_expr -> . LP1 unary_pred EQ unary_pred RP1
    (138) atomic_boolean_expr -> . LP1 unary_pred NEQ unary_pred RP1
    (139) constants -> . TRUE
    (140) constants -> . FALSE

    ID              shift and go to state 63
    LP3             shift and go to state 29
    TRAIT_OF        shift and go to state 30
    NONE            shift and go to state 32
    NOT             shift and go to state 36
    LP1             shift and go to state 31
    TRUE            shift and go to state 40
    FALSE           shift and go to state 41
